# camsort

./: .codecov.yml  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: build.yml  documentation-links.yml  linting.yml  release.yml  tests.yml  typing.yml
docs/source/: api.rst  conf.py  index.rst  start.rst  tutorial.rst  user_guide.rst
docs/source/usage/: index.rst
examples/: GALLERY_HEADER.rst  example.py  run_example.py
src/camsort/: __init__.py  _version.py  camsort.py
tests/: test_example.py
